[package]
name = "webhook-airtable-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
log = "0.4.19"
uuid = { version = "1.5", features = ["v4"] }
flowsnet-platform-sdk = "0.1.5"
webhook-flows = "0.4"
store-flows = "0.3"
serde_json = "1"